--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "16.9.0",
     "react-native": "0.61.4",
     "react-native-ratings": "^6.5.0",
-    "react-native-router-flux": "^4.0.6"
+    "react-native-router-flux": "^4.0.6",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
